# manager_extension

./: .gitignore  .pylintrc.toml  Dockerfile  README.md  compose.yaml  pyproject.toml  some_useful_file.py
.github/workflows/: main.yml
src/manager_extension/mock_rabbitmq_service/: main.py  publisher.py
src/manager_extension/mock_service/: launch_script.py  main.py
src/mock_rabbitmq_service/: publisher.py
src/tests/: test_mock_service.py
