[project]
name = "manager_extension"
description = "A manager for operating asynchronous requests from several services."
version = "0.1.0"
authors = [
    { name = "Ekaterina Vorobeva", email = "katelocat3@gmail.com" }
]
readme = "README.md"

dependencies = [
    "fastapi[all]>=0.108.0",
    "aio-pika>=9.4.0",
]
requires-python = ">=3.10"

[project.scripts]
run-mock-service = "manager_extension.mock_service.launch_script:main"
run-mock-rabbitmq = "manager_extension.mock_rabbitmq_service.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.2",
    "pytest-cov>=4.1.0",
    "pylint>=2.17.4",
    "pylint-quotes>=0.2.3",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"